# crewai

debate/: pyproject.toml
debate/output/: decide.md  oppose.md  propose.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: agents.yaml  tasks.yaml
financial_researcher/: pyproject.toml
financial_researcher/output/: report.md
financial_researcher/src/financial_researcher/: crew.py  main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
product_reviewer/: README.md  pyproject.toml
product_reviewer/output/: product_review_list.json  recommendation.md  review.json
product_reviewer/src/product_reviewer/: crew.py  main.py
product_reviewer/src/product_reviewer/config/: agents.yaml  tasks.yaml
shopping_assistant/: README.md  pyproject.toml
shopping_assistant/src/shopping_assistant/: crew.py  main.py
stock_picker/: pyproject.toml
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/stock_picker/: crew.py  main.py
stock_picker/src/stock_picker/config/: agents.yaml
