[project]
name = "product_reviewer"
version = "0.1.0"
description = "product-reviewer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
product_reviewer = "product_reviewer.main:run"
run_crew = "product_reviewer.main:run"
train = "product_reviewer.main:train"
replay = "product_reviewer.main:replay"
test = "product_reviewer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
